--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding: 10px 350px; 
   margin: 0 auto;
-  /* z-index: 10; */
+  z-index: 10;
   box-sizing: border-box;
   background-color: var(--color-paper);
 }
@@ -44,7 +44,8 @@
 @media screen and (max-width: 500px) {
   .header {
     padding: 5px 10px;
-    height: 36px;   
+    height: 40px; 
+    
   }
 }
 
@@ -57,4 +58,9 @@
   .header__logo {
     height: 30px;   
   }
+}
+
+.header__socials {
+  flex-grow: 1;
+  padding-right: 84px;
 }
