--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -56,6 +56,14 @@
   background: linear-gradient(256.35deg, #e3e8e2 0%, #ecebe7 91.6%);
 }
 
+@media screen and (max-width: 500px) {
+  .main__wakeboard {
+    padding-top: 80px;
+    
+  }
+  
+}
+
 .main__slider {
   background-color: var(--color-font);
 }
