--- a/src/components/PriceTabs/PriceTabs.css
+++ b/src/components/PriceTabs/PriceTabs.css
@@ -79,7 +79,7 @@ width: 580px;
   .tab__title{
     font-size: 16px;
     line-height: 24px;
-    height: 65px;
+    height: 60px;
     display: inline-block;
     color: var(--color-darkgrey);
     cursor: pointer;
@@ -93,6 +93,20 @@ width: 580px;
     white-space: pre-wrap;
   }
 }
+
+
+@media screen and (max-width: 340px) {
+  .tab__title{
+    padding-left: 0px;
+    width: 130px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 10px; 
+  }
+}
+
 
 
 
@@ -157,6 +171,9 @@ width: 580px;
 
 
 
+
+
+
 .tab__content{
   opacity: 0;
   transition: opacity  .4s cubic-bezier(0.65, 0, 0.076, 1);
@@ -218,6 +235,13 @@ width: 580px;
   
 }
 
+@media screen and (max-width: 330px) {
+  .tab-table__name {
+    font-size: 14px;
+  }
+  
+}
+
 .tab-table__value {
   margin: 0;
   font-weight: 700;
@@ -231,6 +255,12 @@ width: 580px;
   
 }
 
+@media screen and (max-width: 330px) {
+  .tab-table__value {
+    font-size: 14px;
+  }
+  
+}
 
 
 .tab-table__string {
