--- a/src/components/Walks/Walks.css
+++ b/src/components/Walks/Walks.css
@@ -13,6 +13,17 @@
     
   }
 
+  @media screen and (max-width: 500px) {
+    .walks {
+       padding-left: 10px;
+       padding-right: 10px;
+       padding-top: 80px;
+       padding-bottom: 50px;
+    }
+    
+  }
+
+
 .walks__intro {
     margin: 0 auto;
     width: 100%;
@@ -25,10 +36,26 @@
     color: #ffffff !important;
 }
 
+@media screen and (max-width: 500px) {
+    .walks__title {
+        padding-bottom: 10px;
+    }    
+    
+  }
+
 .walks__subtitle {
     max-width: 550px;
 }
 
+
+
+@media screen and (max-width: 500px) {
+    .walks__subtitle {
+        padding-bottom: 20px;
+    }
+    
+    
+  }
 
 .walks__description {
   color: #fff !important;
@@ -44,3 +71,4 @@
           padding-bottom: 90px; 
       }
   }
+
