--- a/src/components/ImagePopup/ImagePopup.css
+++ b/src/components/ImagePopup/ImagePopup.css
@@ -25,7 +25,7 @@
   height: 95%;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .popup__image-container {
     width: 100%;
     height: 100%;
@@ -52,12 +52,12 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .popup__slide {   
     width: 100%;
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 30px;
+    padding-top: 10px;
     box-sizing: border-box;
   }
 }
@@ -91,6 +91,13 @@
 
   }
 } 
+@media screen and (max-width: 900px) {
+  .popup__image {
+   
+    max-height: 400px;
+
+  }
+} 
 
 .popup__image-title {
   align-self: baseline;
@@ -114,12 +121,13 @@
 } 
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .popup__image-title { 
     font-size: 32px;
     line-height: 44px;
     color: var(--color);  
-    padding-bottom: 10px;  
+    padding-bottom: 10px;
+    padding-left: 15px;  
   }
 } 
 
@@ -139,13 +147,13 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 900px) {
   .popup__close-button {
 
     width: 60px;
     height: 60px;
-    top: 20px;
-    right: 0px;
+    top: 10px;
+    right: 10px;
     background-size: 60px 60px;
   }
   
