--- a/src/components/Navigation/navbar.css
+++ b/src/components/Navigation/navbar.css
@@ -177,3 +177,42 @@
 .menu a:nth-child(4) span {
   transition: all 0.5s 0.25s, opacity 0.5s 0s, transform 0.5s 0s;
 }
+
+
+
+.mimg{
+  width: 100%;
+  height: auto;
+      object-fit: contain;
+  }
+  .html__buttons-wrapper {
+      position: absolute;
+      top:20px;
+      right: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+  }
+  
+  .html__iframe {   
+      border:none;
+      position: relative;
+      width: 100%;
+  }
+  
+  .html__button {
+      background: transparent;
+      border: none !important;
+      outline: none;
+      width: 30px;
+      height: 30px;
+      margin:0;
+      padding: 0;
+      cursor: pointer;
+  }
+  
+  .html__button-ico {
+      width: 24px;
+      height: 24px;
+  }
