--- a/src/components/PriceTabs/PriceTabs.css
+++ b/src/components/PriceTabs/PriceTabs.css
@@ -24,12 +24,25 @@ width: 580px;
 @media screen and (max-width: 500px) {
   .tabs{
     background-image: var(--pricebg);
-    background-size: 270px 210px;
+    background-size: 270px 220px;
     background-position: bottom right -30px;
     background-repeat: no-repeat;
   display: flex;
   align-items: center;
-  width: 100%;
+  max-width: 350px;
+  }
+  
+}
+
+@media screen and (max-width: 360px) {
+  .tabs{
+    background-image: var(--pricebg);
+    background-size: 270px 220px;
+    background-position: bottom right -30px;
+    background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  max-width: 100%;
   }
   
 }
@@ -72,6 +85,7 @@ width: 580px;
     box-sizing: border-box;
     padding-left: 15px;
     transition: color 0.4s cubic-bezier(0.65, 0, 0.076, 1);
+   
   }
 }
 
@@ -83,14 +97,16 @@ width: 580px;
     display: inline-block;
     color: var(--color-darkgrey);
     cursor: pointer;
-    width: 160px;
-    padding-top: 8px;
+    width: 160px;    
     box-sizing: border-box;
+    padding-top: 8px;
     padding-left: 5px;
     transition: color 0.4s cubic-bezier(0.65, 0, 0.076, 1);
     text-align: center;
-   
+    vertical-align: baseline;
     white-space: pre-wrap;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -132,9 +148,9 @@ width: 580px;
 @media screen and (max-width: 500px) {
   .tab__title_active {
     background-image: var(--activetab);
-    background-size: 180px 80px;
+    background-size: 150px 100%;
     background-repeat: no-repeat;
-    background-position: left bottom 5px;
+    background-position: left bottom 0px;
     color: var(--active-color);
     font-weight: 700;
   }
