--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -47,7 +47,23 @@
     justify-content: space-between;
     width: 100%;
     list-style: none;
-    padding-left: 0;
+    padding-left: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
+  }
+}
+
+
+@media screen and (max-width: 380px) {
+  .slider__titles {
+    top: -95px;
+    left: 5px;   
+    flex-wrap: wrap;     
+    justify-content: space-around;
+    width: 90%;   
+    padding-left: 5px;
+    padding-left: 5px;
+  
   }
 }
 
@@ -66,7 +82,18 @@
     line-height: 22px;
     text-align: center;
     font-weight: 700;
+    max-width: 24%;
     transition: all 0.4s cubic-bezier(0.65, 0, 0.076, 1);
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .slider__title:last-of-type {
+    padding-top: 5px;
+    text-align: center;
+   
+    max-width: 100%;
+
   }
 }
 
@@ -115,8 +142,8 @@
   .slider-item__columns {
     flex-direction: column;
     justify-content:center;
-    padding-left: 0;
-    padding-right: 24px;
+    padding-right: 0;
+    padding-left: 24px;
   }
 }
 
