--- a/src/components/Socials/Socials.css
+++ b/src/components/Socials/Socials.css
@@ -33,7 +33,7 @@
 @media screen and (max-width: 500px) {
   .socials__item {
     width: 26px;
-    height: 26px;
+    min-height: 26px;
     
   }
 
