--- a/src/components/Wakeboard/Wakeboard.css
+++ b/src/components/Wakeboard/Wakeboard.css
@@ -33,6 +33,15 @@
   }
 }
 
+@media screen and (max-width: 350px) {
+  .wakeboard__columns {
+
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+
 .wakeboard__bg {
   border-radius: 250px 0px 0px 0px;
 }
@@ -96,7 +105,7 @@
 
 .wakeboard__info {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
 }
 
 
