--- a/src/components/ImagePopup/ImagePopup.css
+++ b/src/components/ImagePopup/ImagePopup.css
@@ -123,11 +123,11 @@
 
 @media screen and (max-width: 900px) {
   .popup__image-title { 
-    font-size: 32px;
-    line-height: 44px;
+    font-size: 24px;
+    line-height: 32px;
     color: var(--color);  
-    padding-bottom: 10px;
-    padding-left: 15px;  
+    padding-bottom: 5px;
+    padding-left: 10px;  
   }
 } 
 
@@ -150,11 +150,11 @@
 @media screen and (max-width: 900px) {
   .popup__close-button {
 
-    width: 60px;
-    height: 60px;
-    top: 10px;
+    width: 50px;
+    height: 50px;
+    top: 0px;
     right: 10px;
-    background-size: 60px 60px;
+    background-size: 50px 50px;
   }
   
 } 
@@ -250,3 +250,12 @@
   margin-left: auto;
   width: 40px;
 }
+
+@media screen and (max-width: 900px) {
+  .popup__image-counter {
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  }
+  
+} 
